--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "webpack-cli": "^3.3.9"
   },
   "scripts": {
-    "build": "webpack --config webpack.config.js && cp manifest.json dist && cp static/* dist",
+    "build": "webpack --config webpack.config.js && cp manifest.json dist && cp -r static/* dist",
     "clean": "rm -rf ./dist"
   },
   "dependencies": {
