--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.6.0",
+    "jest": "^24.9.0",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9"
   },
   "scripts": {
     "build": "webpack --config webpack.config.js && cp manifest.json dist && cp -r static/* dist",
-    "clean": "rm -rf ./dist"
+    "clean": "rm -rf ./dist",
+    "snap": "jest --updateSnapshot",
+    "test": "jest"
   },
   "dependencies": {
     "luxon": "^1.19.3",
