Refactor content scripts

--- a/manifest.json
+++ b/manifest.json
@@ -9,20 +9,13 @@
   },
   "content_scripts": [
     {
-      "matches": ["*://www.fedex.com/apps/fedextrack/?*"],
-      "js": ["fedex.js"]
-    },
-    {
-      "matches": ["*://www.ups.com/track?*"],
-      "js": ["ups.js"]
-    },
-    {
-      "matches": ["*://tools.usps.com/go/TrackConfirmAction?*"],
-      "js": ["usps.js"]
-    },
-    {
-      "matches": ["*://www.dhl.com/*/express/tracking.html?*"],
-      "js": ["dhl.js"]
+      "matches": [
+        "*://www.fedex.com/apps/fedextrack/?*",
+        "*://www.ups.com/track?*",
+        "*://tools.usps.com/go/TrackConfirmAction?*",
+        "*://www.dhl.com/*/express/tracking.html?*"
+      ],
+      "js": ["search.js"]
     }
   ],
   "browser_action": {
